@startuml

title __PAYMENT-SERVICE's Class Diagram__\n

  namespace  {
    class MavenWrapperDownloader {
    }
  }
  

  namespace  {
    namespace om.groupjn.paymentservice {
      class com.groupjn.paymentservice.PaymentServiceApplication {
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.paymentservice {
      namespace controller {
        class com.groupjn.paymentservice.controller.PaymentController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.paymentservice {
      namespace entity {
        class com.groupjn.paymentservice.entity.Payment {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.paymentservice {
      namespace repository {
        interface com.groupjn.paymentservice.repository.PaymentRepository {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.paymentservice {
      namespace service {
        class com.groupjn.paymentservice.service.PaymentService {
        }
      }
    }
  }
  

  com.groupjn.paymentservice.controller.PaymentController o-- com.groupjn.paymentservice.service.PaymentService : paymentService
  com.groupjn.paymentservice.service.PaymentService o-- com.groupjn.paymentservice.repository.PaymentRepository : paymentRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
